--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ audio{display:none}
   </div>
 
   <div id="resultState">
-    <h1>OKAY OKAY 😭❤️</h1>
+    <h1>OKAY OKAY 😈❤️</h1>
     <p>You win. Or actually…<br><strong>WE</strong> win.</p>
     <p>MiMi, this wasn’t just a page.<br>It’s a memory.</p>
     <h1>💍 Be mine. Always.</h1>
