--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ audio{display:none}
     <h1>OKAY OKAY 😈❤️</h1>
     <p>You win. Or actually…<br><strong>WE</strong> win.</p>
     <p>MiMi, this wasn’t just a page.<br>It’s a memory.</p>
-    <h1>💍 Be mine. Always.</h1>
+    <h1>Be mine 💍 Always</h1>
     <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="320">
   </div>
 
